# In-Flo

./: .gitignore  README.md
app/: globals.css  layout.tsx  page.tsx
app/actions/: chat-actions.ts
app/api/chat/: route.ts
app/api/files/clear/: route.ts
app/api/files/process/: route.ts
app/api/gemini/models/: route.ts
app/api/groq/models/: route.ts
app/api/models/[provider]/: route.ts
app/api/ollama/models/: route.ts
app/api/openrouter/models/: route.ts
app/settings/: page.tsx
components/input-box/: chat-input.tsx  edit-message-input.tsx  file-manager.tsx
components/input-box/model-selector/: ProviderTabs.tsx  SearchBar.tsx  model-selector.tsx
components/input-box/model-selector/hooks/: use-model-fetcher.ts  use-pinned-models.ts
components/interface/: chat-header.tsx  main-page.tsx  sidebar.tsx  theme-provider.tsx  welcome-screen.tsx
components/messages/: message-list.tsx
components/messages/content/: citation-link.tsx  code-block.tsx  message-content.tsx  sources-footer.tsx  thinking-block.tsx
context/: chat-context.tsx
context/hooks/: use-chat-settings.ts  use-chat-storage.ts  use-chat-streaming.ts
hooks/: use-mobile.ts
lib/: model-logos.ts  settings.ts  stream.ts  utils.ts
python-backend/: config.py  pyproject.toml  server.py
python-backend/providers/: __init__.py  base.py  gemini.py  groq.py  huggingface.py  ollama.py  openrouter.py
python-backend/routes/: __init__.py  chat.py  files.py  models.py
python-backend/services/chat/: context_builder.py
python-backend/services/file_upload/: __init__.py  pdf_processing.py  vector_store.py
python-backend/services/web_search/: __init__.py  faiss.py  query_expander.py  scraper.py  search.py
python-backend/utils/: chunking.py  embeddings.py  faiss.py  get_embedding_function.py  logging.py  model_list.py  pdf_processing.py  prompts.py  query_func.py  schemas.py  sources.py  vector_store.py  web_search.py
python-backend/utils/web_search/: scraper.py  search.py
types/: chat.ts  models.ts
