[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.38.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.2",
  "markdownify>=1.2.2",
  "lxml>=5.4.0",
  "numpy<2.1.1",
  "ddgs==9.5.0",
  "tavily-python>=0.7.12",
  "faiss-cpu>=1.12.0",
  "chromadb>=1.3.0",
  "tqdm>=4.66.5",
  "google-genai>=1.56.0",
  "groq>=0.33.0",
  "huggingface-hub[cli]>=0.36.0",
  "ollama>=0.6.0",
  "pydantic>=2.11.7",
  "pypdf>=6.1.3",
  "python-multipart>=0.0.21",
  "sentence-transformers>=5.1.2",
  "langchain>=1.0.3",
  "langchain-community>=0.4.1",
  "langchain-huggingface>=1.0.0",
  "langchain-ollama>=1.0.0",
  "torch>=2.9.0",
  "accelerate>=1.11.0",
  "onnxruntime-gpu>=1.23.2",
  "fastembed-gpu>=0.7.3",
  "openai>=2.15.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
